--- a/package.json
+++ b/package.json
@@ -18,13 +18,17 @@
     "@types/multer": "^1.4.10",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.1",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.1",
     "ts-node-dev": "^2.0.0",
+    "twilio": "^4.19.0",
     "typescript": "^5.2.2"
   }
 }
